# gsl-cmake

./: CMakeLists.txt  README.md
cmake/: MODIFIED.txt  config.cmake  config.h.in  dir.cmake  make_config.sh  make_dir.sh  make_test.sh  makefile  test.cmake  test.sh  util.cmake
cmake/config/: GSL_HAVE_AIX_IEEE_INTERFACE.cmake  GSL_HAVE_DARWIN86_IEEE_INTERFACE.cmake  GSL_HAVE_DARWIN_IEEE_INTERFACE.cmake  GSL_HAVE_DECL_ATANH.cmake  GSL_HAVE_DECL_FEENABLEEXCEPT.cmake  GSL_HAVE_DECL_ISFINITE.cmake  GSL_HAVE_DECL_ISINF.cmake  GSL_HAVE_DECL_ISNAN.cmake  GSL_HAVE_DECL_LOG1P.cmake  GSL_HAVE_DLFCN_H.cmake  GSL_HAVE_EXIT_SUCCESS_AND_FAILURE.cmake  GSL_HAVE_FPU_X86_SSE.cmake  GSL_HAVE_FREEBSD_IEEE_INTERFACE.cmake  GSL_HAVE_GNUPPC_IEEE_INTERFACE.cmake  GSL_HAVE_GNUSPARC_IEEE_INTERFACE.cmake  GSL_HAVE_GNUX86_IEEE_INTERFACE.cmake  GSL_HAVE_HPUX11_IEEE_INTERFACE.cmake  GSL_HAVE_HPUX_IEEE_INTERFACE.cmake  GSL_HAVE_IEEEFP_H.cmake  GSL_HAVE_IEEE_COMPARISONS.cmake  GSL_HAVE_IEEE_DENORMALS.cmake  GSL_HAVE_INLINE.cmake  GSL_HAVE_INTTYPES_H.cmake  GSL_HAVE_LIBM.cmake  GSL_HAVE_MEMORY_H.cmake  GSL_HAVE_NETBSD_IEEE_INTERFACE.cmake  GSL_HAVE_OPENBSD_IEEE_INTERFACE.cmake  GSL_HAVE_SOLARIS_IEEE_INTERFACE.cmake  GSL_HAVE_STDINT_H.cmake  GSL_HAVE_STDLIB_H.cmake  GSL_HAVE_STRINGS_H.cmake  GSL_HAVE_STRING_H.cmake  GSL_HAVE_STRTOL.cmake  GSL_HAVE_SUNOS4_IEEE_INTERFACE.cmake  GSL_HAVE_SYS_STAT_H.cmake  GSL_HAVE_SYS_TYPES_H.cmake  GSL_HAVE_UNISTD_H.cmake  GSL_STDC_HEADERS.cmake
cmake/dir/: blas.cmake  block.cmake  bspline.cmake  cblas.cmake  cdf.cmake  cheb.cmake  combination.cmake  complex.cmake  const.cmake  deriv.cmake  dht.cmake  diff.cmake  doc.cmake  eigen.cmake  err.cmake  fft.cmake  fit.cmake  gsl.cmake  histogram.cmake  ieee-utils.cmake  integration.cmake  interpolation.cmake  linalg.cmake  matrix.cmake  min.cmake  monte.cmake  multifit.cmake  multifit_nlinear.cmake  multilarge.cmake  multilarge_nlinear.cmake  multimin.cmake  multiroots.cmake  multiset.cmake  ntuple.cmake  ode-initval.cmake  ode-initval2.cmake  permutation.cmake  poly.cmake  qrng.cmake  randist.cmake  (+16 more)
cmake/have/: GSL_HAVE_AIX_IEEE_INTERFACE.cmake  GSL_HAVE_DARWIN86_IEEE_INTERFACE.cmake  GSL_HAVE_DARWIN_IEEE_INTERFACE.cmake  GSL_HAVE_DECL_ACOSH.cmake  GSL_HAVE_DECL_ASINH.cmake  GSL_HAVE_DECL_EXPM1.cmake  GSL_HAVE_DECL_FESETTRAPENABLE.cmake  GSL_HAVE_DECL_FINITE.cmake  GSL_HAVE_DECL_FPRND_T.cmake  GSL_HAVE_DECL_FREXP.cmake  GSL_HAVE_DECL_HYPOT.cmake  GSL_HAVE_DECL_LDEXP.cmake  GSL_HAVE_DLFCN_H.cmake  GSL_HAVE_DOPRNT.cmake  GSL_HAVE_EXTENDED_PRECISION_REGISTERS.cmake  GSL_HAVE_FPU_X86_SSE.cmake  GSL_HAVE_FREEBSD_IEEE_INTERFACE.cmake  GSL_HAVE_GNUM68K_IEEE_INTERFACE.cmake  GSL_HAVE_GNUPPC_IEEE_INTERFACE.cmake  GSL_HAVE_GNUSPARC_IEEE_INTERFACE.cmake  GSL_HAVE_GNUX86_IEEE_INTERFACE.cmake  GSL_HAVE_HPUX_IEEE_INTERFACE.cmake  GSL_HAVE_IEEEFP_H.cmake  GSL_HAVE_INTTYPES_H.cmake  GSL_HAVE_IRIX_IEEE_INTERFACE.cmake  GSL_HAVE_MEMCPY.cmake  GSL_HAVE_MEMMOVE.cmake  GSL_HAVE_MEMORY_H.cmake  GSL_HAVE_NETBSD_IEEE_INTERFACE.cmake  GSL_HAVE_OPENBSD_IEEE_INTERFACE.cmake  GSL_HAVE_OS2EMX_IEEE_INTERFACE.cmake  GSL_HAVE_PRINTF_LONGDOUBLE.cmake  GSL_HAVE_SOLARIS_IEEE_INTERFACE.cmake  GSL_HAVE_STDINT_H.cmake  GSL_HAVE_STDLIB_H.cmake  GSL_HAVE_STRDUP.cmake  GSL_HAVE_STRINGS_H.cmake  GSL_HAVE_STRING_H.cmake  GSL_HAVE_STRTOUL.cmake  GSL_HAVE_SUNOS4_IEEE_INTERFACE.cmake  (+5 more)
cmake/platform/: ios.cmake
cmake/test/: blas.cmake  block.cmake  bspline.cmake  cblas.cmake  cdf.cmake  cheb.cmake  combination.cmake  complex.cmake  const.cmake  deriv.cmake  dht.cmake  diff.cmake  doc.cmake  eigen.cmake  err.cmake  fft.cmake  fit.cmake  gsl.cmake  histogram.cmake  ieee-utils.cmake  integration.cmake  interpolation.cmake  linalg.cmake  matrix.cmake  min.cmake  monte.cmake  multifit.cmake  multifit_nlinear.cmake  multilarge.cmake  multilarge_nlinear.cmake  multimin.cmake  multiroots.cmake  multiset.cmake  ntuple.cmake  ode-initval.cmake  ode-initval2.cmake  permutation.cmake  poly.cmake  qrng.cmake  randist.cmake  (+16 more)
gsl/: gsl_inline.h
